# rustecal

./: 404.html  Cargo.toml  README.md  about.html  introduction.html  print.html  project_status.html  project_structure.html  searchindex.js  toc.html  toc.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  generate-docs.yml
api/: ecal.html  index.html  message_types.html  publisher.html  service_client.html  service_server.html  subscriber.html  zero_copy_messaging.html
docs/src/: SUMMARY.md  project_structure.md
examples/: binary.html  index.html  json.html  logging.html  monitoring.html  protobuf.html  service_client.html  service_server.html  string.html
rustecal/: Cargo.toml
rustecal-core/: Cargo.toml
rustecal-core/src/: components.rs  configuration.rs  core.rs  lib.rs  log.rs  log_level.rs  monitoring.rs
rustecal-pubsub/: Cargo.toml  README.md
rustecal-pubsub/src/: lib.rs  payload_writer.rs  publisher.rs  (+4 more)
rustecal-samples/pubsub/person_receive/: Cargo.toml
rustecal-samples/pubsub/person_receive/src/: main.rs
rustecal-service/: Cargo.toml  README.md
rustecal-sys/: Cargo.toml  build.rs
rustecal-types-bytes/: Cargo.toml  README.md
rustecal-types-protobuf/: Cargo.toml  README.md
rustecal-types-protobuf/src/: lib.rs
rustecal-types-serde/: Cargo.toml  README.md
rustecal-types-string/: Cargo.toml  README.md
setup/: ecal_installation.html  getting_started.html
types/: message_types.html
(+64 files in other folders)
