[package]
name          = "rustecal-types-protobuf"
version       = "0.1.6"
authors       = ["Rex Schilasky"]
edition       = "2024"
description   = "Google Protobuf type support for rustecal TypedPublisher/TypedSubscriber"
license       = "Apache-2.0"
repository    = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal-types-protobuf"
readme        = "README.md"
keywords      = ["ecal", "ipc", "pubsub", "message-support", "middleware"]
categories    = ["network-programming", "api-bindings"]

[dependencies]
prost = "0.14"
prost-reflect = { version = "0.16.0", features = ["derive"] }
rustecal-core   = { version = "0.1", path = "../rustecal-core" }
rustecal-pubsub = { version = "0.1", path = "../rustecal-pubsub" }
